--- a/src/app/Styles/globals.scss
+++ b/src/app/Styles/globals.scss
@@ -9,3 +9,6 @@
 @import "../../components/Agency/agency.scss";
 @import "../../components/Project/project.scss";
 @import "../../components/Work/work.scss";
+@import "../../components/Partners/partners.scss";
+@import "../../components/About/about.scss";
+@import "../../components/Subscribe/subscribe.scss";
