--- a/src/components/Banner/banner.scss
+++ b/src/components/Banner/banner.scss
@@ -1,6 +1,26 @@
 .banner {
   margin-top: 85px;
   margin-bottom: 120px;
+  @include media-breakpoint-down(xl) {
+    margin-top: 85px;
+    margin-bottom: 110px;
+  }
+  @include media-breakpoint-down(lg) {
+    margin-top: 80px;
+    margin-bottom: 100px;
+  }
+  @include media-breakpoint-down(md) {
+    margin-top: 60px;
+    margin-bottom: 90px;
+  }
+  @include media-breakpoint-down(sm) {
+    margin-top: 40px;
+    margin-bottom: 70px;
+  }
+  @include media-breakpoint-down(xs) {
+    margin-top: 40px;
+    margin-bottom: 70px;
+  }
   .banner-content {
     h1 {
       color: $white;
@@ -10,6 +30,21 @@
       span {
         color: $yeallo;
       }
+      @include media-breakpoint-down(xl) {
+        font-size: 66px;
+      }
+      @include media-breakpoint-down(lg) {
+        font-size: 65px;
+      }
+      @include media-breakpoint-down(md) {
+        font-size: 50px;
+      }
+      @include media-breakpoint-down(sm) {
+        font-size: 38px;
+      }
+      @include media-breakpoint-down(xs) {
+        font-size: 32px;
+      }
     }
     p {
       color: $white-secondary;
@@ -18,6 +53,36 @@
       line-height: 30px;
       padding: 0 50px;
       margin-bottom: 40px;
+      @include media-breakpoint-down(xxl) {
+        font-size: 18px;
+        line-height: 30px;
+        padding: 0 8px;
+      }
+      @include media-breakpoint-down(xl) {
+        font-size: 18px;
+        line-height: 30px;
+        padding: 0 30px;
+      }
+      @include media-breakpoint-down(lg) {
+        font-size: 18px;
+        line-height: 30px;
+        padding: 0;
+      }
+      @include media-breakpoint-down(md) {
+        font-size: 18px;
+        line-height: 30px;
+        padding: 0;
+      }
+      @include media-breakpoint-down(sm) {
+        font-size: 17px;
+        line-height: 26px;
+        padding: 0;
+      }
+      @include media-breakpoint-down(xs) {
+        font-size: 16px;
+        line-height: 24px;
+        padding: 0;
+      }
     }
     button {
       background-color: $main;
@@ -29,6 +94,26 @@
       outline: none;
       border: none;
       margin-bottom: 60px;
+      @include media-breakpoint-down(lg) {
+        font-size: 20px;
+        padding: 18px 32px;
+        margin-bottom: 60px;
+      }
+      @include media-breakpoint-down(md) {
+        font-size: 19px;
+        padding: 14px 28px;
+        margin-bottom: 60px;
+      }
+      @include media-breakpoint-down(sm) {
+        font-size: 18px;
+        padding: 12px 24px;
+        margin-bottom: 50px;
+      }
+      @include media-breakpoint-down(xs) {
+        font-size: 16px;
+        padding: 10px 20px;
+        margin-bottom: 50px;
+      }
     }
   }
   .banner-img {
