--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -1,17 +1,69 @@
 .footer {
   .short_info_footer {
     .short-text {
-      margin-top: 50px;
+      margin-top: 43px;
+      @include media-breakpoint-down(xl) {
+        margin-top: 46px;
+      }
+      @include media-breakpoint-down(lg) {
+        margin-top: 30px;
+      }
+      @include media-breakpoint-down(md) {
+        margin-top: 20px;
+      }
+      @include media-breakpoint-down(sm) {
+        margin-top: 20px;
+      }
+      @include media-breakpoint-down(xs) {
+        margin-top: 20px;
+      }
       p {
         font-size: 18px;
         font-weight: 400;
         color: $white;
         line-height: 30px;
         padding-right: 60px;
+        @include media-breakpoint-down(xxl) {
+          padding-right: 20px;
+        }
+        @include media-breakpoint-down(xl) {
+          font-size: 16px;
+          line-height: 28px;
+          padding-right: 0px;
+        }
+        @include media-breakpoint-down(lg) {
+          font-size: 18ppx;
+          line-height: 30px;
+          padding-right: 50px;
+        }
+        @include media-breakpoint-down(md) {
+          font-size: 18ppx;
+          line-height: 30px;
+          padding-right: 175px;
+        }
+        @include media-breakpoint-down(sm) {
+          font-size: 17ppx;
+          line-height: 28px;
+          padding-right: 100px;
+        }
+        @include media-breakpoint-down(xs) {
+          font-size: 16ppx;
+          line-height: 24px;
+          padding: 0;
+        }
       }
     }
   }
   .footer-before-list {
+    @include media-breakpoint-down(md) {
+      margin-top: 30px;
+    }
+    @include media-breakpoint-down(sm) {
+      margin-top: 30px;
+    }
+    @include media-breakpoint-down(xs) {
+      margin-top: 30px;
+    }
     h4 {
       font-weight: 700;
       font-size: 20px;
@@ -19,6 +71,18 @@
     }
     .before-List {
       margin-top: 54px;
+      @include media-breakpoint-down(lg) {
+        margin-top: 38px;
+      }
+      @include media-breakpoint-down(md) {
+        margin-top: 28px;
+      }
+      @include media-breakpoint-down(sm) {
+        margin-top: 28px;
+      }
+      @include media-breakpoint-down(xs) {
+        margin-top: 28px;
+      }
       a {
         display: block;
         font-weight: 400;
@@ -28,6 +92,22 @@
         &:last-child {
           margin-bottom: 0;
         }
+        @include media-breakpoint-down(xl) {
+          font-size: 16px;
+          margin-bottom: 12px;
+        }
+        @include media-breakpoint-down(md) {
+          font-size: 16px;
+          margin-bottom: 10px;
+        }
+        @include media-breakpoint-down(sm) {
+          font-size: 16px;
+          margin-bottom: 10px;
+        }
+        @include media-breakpoint-down(xs) {
+          font-size: 16px;
+          margin-bottom: 10px;
+        }
       }
     }
   }
@@ -36,14 +116,56 @@
       font-weight: 700;
       font-size: 20px;
       color: $white;
+      @include media-breakpoint-down(md) {
+        margin-top: 60px;
+      }
+      @include media-breakpoint-down(sm) {
+        margin-top: 30px;
+      }
+      @include media-breakpoint-down(xs) {
+        margin-top: 30px;
+      }
     }
     .newsletter-body {
       margin-top: 54px;
+      @include media-breakpoint-down(lg) {
+        margin-top: 10px;
+      }
+      @include media-breakpoint-down(md) {
+        margin-top: 20px;
+      }
+      @include media-breakpoint-down(sm) {
+        margin-top: 20px;
+      }
+      @include media-breakpoint-down(xs) {
+        margin-top: 20px;
+      }
       p {
         font-size: 17px;
         font-weight: 400;
         color: $white;
         line-height: 30px;
+        @include media-breakpoint-down(xl) {
+          font-size: 15px;
+        }
+        @include media-breakpoint-down(lg) {
+          font-size: 17px;
+          line-height: 30px;
+          padding-right: 90px;
+        }
+        @include media-breakpoint-down(md) {
+          font-size: 17px;
+          line-height: 28px;
+          padding-right: 210px;
+        }
+        @include media-breakpoint-down(sm) {
+          font-size: 17px;
+          line-height: 28px;
+        }
+        @include media-breakpoint-down(xs) {
+          font-size: 16px;
+          line-height: 24px;
+        }
       }
       .newsletter-form {
         background: $white;
@@ -51,12 +173,18 @@
         justify-content: space-between;
         align-items: center;
         border-radius: 8px;
+        @include media-breakpoint-down(md) {
+          margin-right: 120px;
+        }
         input {
           background: transparent;
           border: none;
           outline: none;
           margin-left: 15px;
           font-size: 16px;
+          @include media-breakpoint-down(xl) {
+            margin-left: 10px;
+          }
         }
         button {
           background-color: $main;
@@ -65,6 +193,15 @@
           outline: none;
           border-top-right-radius: 8px;
           border-bottom-right-radius: 8px;
+          @include media-breakpoint-down(xl) {
+            padding: 12px 8px;
+          }
+          @include media-breakpoint-down(sm) {
+            padding: 12px 24px;
+          }
+          @include media-breakpoint-down(xs) {
+            padding: 10px 20px;
+          }
           svg {
             width: 25px;
             height: 25px;
@@ -85,6 +222,7 @@
           display: flex;
           justify-content: center;
           align-items: center;
+          outline: none;
           cursor: pointer;
           transition: all linear 0.3s;
           &:hover {
@@ -107,6 +245,16 @@
   width: 100%;
   background-color: $main;
   text-align: center;
+  overflow: hidden;
+  @include media-breakpoint-down(lg) {
+    margin-top: 56px;
+  }
+  @include media-breakpoint-down(sm) {
+    padding: 20px 1px;
+  }
+  @include media-breakpoint-down(xs) {
+    padding: 20px 1px;
+  }
   span {
     color: $white;
     font-weight: 400;
