--- a/src/components/Project/project.scss
+++ b/src/components/Project/project.scss
@@ -1,5 +1,20 @@
 .project {
-  margin-bottom: 122px;
+  margin-bottom: 140px;
+  @include media-breakpoint-down(xl) {
+    margin-bottom: 130px;
+  }
+  @include media-breakpoint-down(lg) {
+    margin-bottom: 120px;
+  }
+  @include media-breakpoint-down(md) {
+    margin-bottom: 120px;
+  }
+  @include media-breakpoint-down(sm) {
+    margin-bottom: 80px;
+  }
+  @include media-breakpoint-down(xs) {
+    margin-bottom: 80px;
+  }
   .project-content {
     margin-bottom: 40px;
     h2 {
@@ -12,6 +27,30 @@
       span {
         color: $yeallo;
       }
+      @include media-breakpoint-down(xl) {
+        font-size: 42px;
+        padding: 0;
+      }
+      @include media-breakpoint-down(lg) {
+        font-size: 40px;
+        padding: 0 130px;
+        margin-bottom: 24px;
+      }
+      @include media-breakpoint-down(md) {
+        font-size: 40px;
+        padding: 0 20px;
+        margin-bottom: 24px;
+      }
+      @include media-breakpoint-down(sm) {
+        font-size: 38px;
+        padding: 0;
+        margin-bottom: 20px;
+      }
+      @include media-breakpoint-down(xs) {
+        font-size: 30px;
+        padding: 0;
+        margin-bottom: 20px;
+      }
     }
     p {
       font-weight: 400;
@@ -20,12 +59,44 @@
       line-height: 30px;
       text-align: center;
       padding: 0 20px;
+      @include media-breakpoint-down(xl) {
+        font-size: 16px;
+        line-height: 28px;
+        padding: 0;
+      }
+      @include media-breakpoint-down(lg) {
+        font-size: 18px;
+        line-height: 30px;
+        padding: 0 45px;
+      }
+      @include media-breakpoint-down(md) {
+        font-size: 18px;
+        line-height: 30px;
+        padding: 0 13px;
+      }
+      @include media-breakpoint-down(sm) {
+        font-size: 18px;
+        line-height: 28px;
+        padding: 0;
+      }
+      @include media-breakpoint-down(xs) {
+        font-size: 16px;
+        line-height: 24px;
+        padding: 0;
+      }
     }
   }
   .project-card {
     padding: 24px;
     background-color: $black;
     border-radius: 16px;
+    margin: 0 15px;
+    @include media-breakpoint-down(md) {
+      padding: 15px;
+    }
+    @include media-breakpoint-down(sm) {
+      margin: 0 20px;
+    }
     img {
       width: 100%;
       height: 100%;
@@ -38,6 +109,14 @@
       color: $white;
       padding-right: 50px;
       margin-bottom: 16px;
+      @include media-breakpoint-down(md) {
+        font-size: 14px;
+        padding: 0;
+      }
+      @include media-breakpoint-down(sm) {
+        font-size: 18px;
+        padding: 0;
+      }
     }
     .card-wrap {
       display: flex;
@@ -49,14 +128,27 @@
         color: $white;
         outline: none;
         border-bottom: 1px solid $white;
+        @include media-breakpoint-down(md) {
+          font-size: 12px;
+        }
+        @include media-breakpoint-down(sm) {
+          font-size: 14px;
+        }
       }
       span {
         font-weight: 500;
         font-size: 16px;
         color: $white;
+        @include media-breakpoint-down(md) {
+          font-size: 12px;
+        }
+        @include media-breakpoint-down(sm) {
+          font-size: 14px;
+        }
       }
     }
     .project-arow {
+      position: relative;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -71,4 +163,40 @@
       }
     }
   }
+  .slick-slider {
+    .slick-dots {
+      button {
+        &::before {
+          color: $white;
+        }
+      }
+    }
+  }
+}
+
+.mainprev {
+  width: 45px;
+  height: 45px;
+  border: 2px solid $white;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  content: "";
+  bottom: -80px;
+  right: 51%;
+}
+.mainnext {
+  width: 45px;
+  height: 45px;
+  border: 2px solid $white;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  content: "";
+  bottom: -80px;
+  left: 51%;
 }
