--- a/src/components/Clients/client.scss
+++ b/src/components/Clients/client.scss
@@ -97,7 +97,7 @@
         height: 100%;
         object-fit: cover;
       }
-      .count {
+      .classcunt {
         position: absolute;
         content: "";
         bottom: 0;
