--- a/src/components/Banner/banner.scss
+++ b/src/components/Banner/banner.scss
@@ -27,6 +27,7 @@
       font-size: 72px;
       font-weight: 700;
       margin-bottom: 28px;
+      line-height: 60px;
       span {
         color: $yeallo;
       }
