--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -145,6 +145,7 @@
         font-weight: 400;
         color: $white;
         line-height: 30px;
+        margin-bottom: 15px;
         @include media-breakpoint-down(xl) {
           font-size: 15px;
         }
